--- a/cesium/index.html
+++ b/cesium/index.html
@@ -6,22 +6,10 @@
       href="https://cesium.com/downloads/cesiumjs/releases/1.82/Build/Cesium/Widgets/widgets.css"
       rel="stylesheet"
     />
-
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
     <div id="cesiumContainer"></div>
-    <script>
-        Cesium.Ion.defaultAccessToken = "MY EYES ONLY";
-        const viewer = new Cesium.Viewer("cesiumContainer", {  
-            terrainProvider: Cesium.createWorldTerrain()
-        });
-        // const tileset = viewer.scene.primitives.add(
-        //     Cesium.createGooglePhotorealistic3DTileset()
-        // );
-        // const osmBuildings = viewer.scene.primitives.add(
-        //     Cesium.createOsmBuildings()
-        // );
-    </script>
+    <script src="cesium.js" type="module"></script>
   </body>
 </html>
