added satellite tile layer and centered on toronto

--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <title>Aero Atlas</title>
   </head>
   <body>
-    <div id="map"></div>
+    <div id="map-container"></div>
     <script type="module" src="./map.js"></script>
   </body>
 </html>
