added test historical flight data

--- a/client/index.html
+++ b/client/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <title>Aero Atlas</title>
         <meta charset="UTF-8" />
         <link rel="icon" type="image/x-icon" href="./airplane-icon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Rubik+Maps&family=Rubik+Mono+One&family=Syne:wght@400..800&display=swap" rel="stylesheet">
-        <title>Aero Atlas</title>
+        <script src="https://api.mapbox.com/mapbox.js/plugins/arc.js/v0.1.0/arc.js"></script>
     </head>
     <body>
         <div id="header">
