added buttons to control map style and heatmap visibility

--- a/client/index.html
+++ b/client/index.html
@@ -30,5 +30,7 @@
                 </div>
             </div>
         </div>
+        <button id="map-style-button">Change Map Style</button>
+        <button id="heatmap-button">Show/Hide Heatmap</button>
     </body>
 </html>
