added basics for extracting DB data

--- a/client/index.html
+++ b/client/index.html
@@ -39,11 +39,11 @@
                 </div>
                 <div id="controls">
                     <select id="time-button">
-                        <option value="24h">Last 24 Hours</option>
-                        <option value="week">Last Week</option>
-                        <option value="month">Last Month</option>
-                        <option value="year">Last Year</option>
-                        <option value="all">All Time</option>
+                        <option value="0">Last 24 Hours</option>
+                        <option value="1">Last Week</option>
+                        <option value="2">Last Month</option>
+                        <option value="3">Last Year</option>
+                        <option value="4">All Time</option>
                     </select>
                     <select id="map-style-button">
                         <option value="World_Terrain_Base">Terrain Base Map</option>
