--- a/client/index.html
+++ b/client/index.html
@@ -33,6 +33,7 @@
             <div id="map-div">
                 <div id="map"></div>
                 <script type="module" src="./map.js"></script>
+                <script type="module" src="./historical-data.js"></script>
                 <div id="popup" class="ol-popup">
                     <a href="#" id="popup-closer" class="ol-popup-closer"></a>
                     <div id="popup-content"></div>
@@ -56,8 +57,8 @@
             </div>
         </section>
 
-        <section class="live-data">
-            <h2 class="section-heading">Live Flight Data</h2>
+        <section class="statistics">
+            <h2 class="section-heading">Statistics</h2>
             <p>Coming Soon!</p>
         </section>
         
@@ -65,7 +66,7 @@
             function scrollPage() {
                 window.scrollBy({
                     top: window.innerHeight,
-                    behavior: 'smooth' // Smooth scrolling behavior
+                    behavior: 'smooth'
                 });
             }
             function toggleParagraph(id) {
