finished historical flight data functionality (mostly)

--- a/client/index.html
+++ b/client/index.html
@@ -40,11 +40,11 @@
                 </div>
                 <div id="controls">
                     <select id="time-button">
-                        <option value="0">Last 24 Hours</option>
-                        <option value="1">Last Week</option>
-                        <option value="2">Last Month</option>
-                        <option value="3">Last Year</option>
-                        <option value="4">All Time</option>
+                        <option value="0">Last 30 Minutes</option>
+                        <option value="1">Last Hour</option>
+                        <option value="2">Last 3 Hours</option>
+                        <option value="3">Last 12 Hours</option>
+                        <option value="4">Last Day</option>
                     </select>
                     <select id="map-style-button">
                         <option value="World_Terrain_Base">Terrain Base Map</option>
