started setup for heatmap functionality

--- a/client/index.html
+++ b/client/index.html
@@ -28,7 +28,7 @@
         </section>
         
         <section class="historical-data">
-            <button class="historical-data-button" onclick="toggleParagraph('historical-data-para')">Historical Flight Data</button>
+            <button class="historical-data-button" onclick="toggleParagraph('historical-data-para')">Historical Flight Data +</button>
             <p id="historical-data-para" class="hidden">This map displays historical flight data from the selected time period. The yellow sections represent the part of the flight path that I personally captured from my antenna, while the brown sections fill in the rest of the flight. <br> Click on airports, change the map style, or display the heatmap to see more.</p>
             <div id="map-div">
                 <div id="map"></div>
