--- a/client/index.html
+++ b/client/index.html
@@ -51,7 +51,7 @@
                         <option value="World_Topo_Map">Topology Base Map</option>
                         <option value="World_Imagery">Imagery Base Map</option>
                     </select>
-                    <!-- <button id="heatmap-button">Show Heatmap</button> -->
+                    <button id="heatmap-button">Show Heatmap</button>
                     <button id="replay-button">Replay Animation</button>
                 </div>
             </div>
